Fix poor Python API docs formatting
It appears we made a change at some point that made it so that our
CSS selector no longer selected the Python API docs as intended, leading
to virtually illegible rendering of those docs. Unless I'm mistaken, we
only use these docs for the Pulumi SDK now-a-days, and not the other
providers, so the fix just targets the styles to that section.

This isn't the first time this has happened (see
https://github.com/pulumi/docs/pull/1397), so I'd love to know if there
are any ideas on what we can do to structurally avoid this breaking again!

--- a/themes/default/assets/sass/_api-python.scss
+++ b/themes/default/assets/sass/_api-python.scss
@@ -22,8 +22,8 @@ div.section[id^="pulumi"] {
     }
 }
 
-// We rely on the Python docs that begin with `<div class="section" id="foo">` to target these styles.
-div.section[id]:not([id=""]) {
+// This selector is for the Pulumi Python SDK page.
+section[id="pulumi-python-sdk"] {
     // Don't show the header link - there's an anchorjs link on this header that does the
     // job just as well.
     h1[id$="\B6"],
